# x30_ros

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
axis_camera/axis_camera/: setup.py
axis_camera/axis_camera/axis_camera/: axis_gazebo_node.py
axis_camera/axis_description/urdf/: axis_q62.urdf.xacro
axis_camera/axis_msgs/: CMakeLists.txt
champ/champ_base/src/: quadruped_controller.cpp
champ/champ_bringup/launch/: bringup.launch  bringup.launch.py
champ/champ_config/launch/: gazebo.launch.py  slam.launch.py
champ/champ_description/launch/: description.launch.py
champ/champ_description/urdf/: X30.urdf.xacro  imu.urdf.xacro  thermal_cam.urdf.xacro
champ/champ_gazebo/config/: ros_control.yaml
champ/champ_gazebo/launch/: gazebo.launch.py
champ/champ_gazebo/scripts/: odometry.py
champ/champ_navigation/launch/: slam.launch.py
champ/champ_navigation/rviz/: navigation.rviz  slam.rviz
realsense2_description/launch/: view_model.launch.py
realsense2_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro
x30_description/: CMakeLists.txt  package.xml
x30_description/config/: ros_control.yaml
x30_description/launch/: gazeb_new.launch.py  gazebo.launch.py
x30_description/urdf/: X30.urdf
x30_description/worlds/: default.world
x30_ros_bridge/: CMakeLists.txt  package.xml
x30_ros_bridge/include/x30_ros_bridge/: command_list.h  motion_sdk_move_robot.h  parse_cmd.h  send_to_robot.h  udp_server.hpp
x30_ros_bridge/src/: command.cpp  command_list.cpp  main.cpp  motion_sdk_move_robot.cpp  parse_cmd.cpp  send_to_robot.cpp
(+7 files in other folders)
